crates/rbx-env/src/commands/snapshots/rbx_env__commands__gen_module__tests__lua.snap
---
source: crates/rbx-env/src/commands/gen_module.rs
expression: generate_lua(&envs)
---
-- This file is automatically @generated by rbx env gen-module.
-- It is not intended for manual editing.

local envs = {
  {
    env = "development",
    universeId = 100,
    rootPlaceId = 1002,
    placeIds = {
      {
        name = "lobby",
        id = 1002,
      },
      {
        name = "main",
        id = 1001,
      },
    }
  },
  {
    env = "prod",
    universeId = 200,
    rootPlaceId = 2001,
    placeIds = {
      {
        name = "arena",
        id = 2002,
      },
      {
        name = "main",
        id = 2001,
      },
    }
  },
}

return envs
